--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,24 @@
 			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
 			<version>1.16</version>
 		</dependency>
+		
+		<!-- iCal4j (for iCalendar processing) -->
+	    <dependency>
+	        <groupId>org.mnode.ical4j</groupId>
+	        <artifactId>ical4j</artifactId>
+	        <version>3.0.24</version>
+	    </dependency>
 
+		<dependency>
+		    <groupId>org.ehcache</groupId>
+		    <artifactId>ehcache</artifactId>
+		    <version>3.10.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.cache</groupId>
+		    <artifactId>cache-api</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 
 	</dependencies>
 
